# easee-rs

./: Cargo.toml  api.restclient
examples/: charger_sessions.rs  login.rs  ongoing_session.rs  site.rs  sites.rs
src/: client.rs  from_str.rs  lib.rs  models.rs
src/client/: auth.rs  body.rs  credentials.rs
src/models/: charger_session.rs  datetime.rs  new_session.rs  raw_session.rs
src/requests/: get_charger_sessions.rs  get_ongoing_session.rs  get_profile.rs  get_site.rs  get_sites.rs  get_user_sessions.rs  login.rs  mod.rs  refresh_token.rs
test_data/: failing_sessions.json
