[package]
name = "easeeapi"
version = "0.8.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
http = "0.2.9"
leaky-bucket-lite = "0.5.2"
reqwest = { version = "0.11.14", default_features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.91"
thiserror = "1.0.38"
time = { version = "0.3.20", features = [ "serde", "macros", "parsing", "formatting" ] }

tokio = { version = "1.25.0", default_features = false, features = [ "sync" ] }
tracing = "0.1.37"


[dev-dependencies]
anyhow = "1.0.69"
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = [ "sync", "macros", "rt-multi-thread" ] }
