[package]
name = "easeeapi"
version = "0.16.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
http = "1"
leaky-bucket-lite = "0.5"
reqwest = { version = "0.12", default-features = false, features = [ "json", "rustls-tls" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = [ "serde", "macros", "parsing", "formatting" ] }
tokio = { version = "1", default-features = false, features = [ "sync" ] }
tracing = "0.1"


[dev-dependencies]
anyhow = "1.0.69"
tracing-subscriber = "0.3.16"
tokio = { version = "1", features = [ "sync", "macros", "rt-multi-thread" ] }
